force-app/main/default/objects/Opportunity/fields/After_Completing_a_Test_Drive_status__c.field-meta.xml
<CustomField>
    <fullName>After_Completing_a_Test_Drive_status__c</fullName>
    <label>After Completing a Test Drive Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>