force-app/main/default/objects/Opportunity/fields/Car_Model__c.field-meta.xml
<CustomField>
    <fullName>Car_Model__c</fullName>
    <label>Car Model</label>
    <length>50</length>
    <type>Text</type>
</CustomField>