force-app/main/default/objects/Opportunity/fields/Customer_Response_to_Past_Interactions__c.field-meta.xml
<CustomField>
    <fullName>Customer_Response_to_Past_Interactions__c</fullName>
    <label>Customer&apos;s Response to Past Interactions</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Negative</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
            <value>
                <fullName>Positive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>