force-app/main/default/objects/Opportunity/fields/Recency_of_Interactions__c.field-meta.xml
<CustomField>
    <fullName>Recency_of_Interactions__c</fullName>
    <label>Recency of Interactions</label>
    <length>20</length>
    <type>Text</type>
</CustomField>