force-app/main/default/objects/Opportunity/fields/Test_Drive_Date__c.field-meta.xml
<CustomField>
    <fullName>Test_Drive_Date__c</fullName>
    <label>Test Drive Date</label>
    <type>Date</type>
</CustomField>